# rust_pastebin

./: Cargo.toml  pastes.db
migrations/: 0001_create_pastes.sql
src/: main.rs
