[package]
name = "pastebin"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.28.0", features = ["full"] }
sqlx = { version = "0.7.0", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0.152", features = ["derive"] }
nanoid = "0.4.0"
